# controller/transferController.js
@@ -1,7 +1,9 @@
+
 const express = require('express');
 const router = express.Router();
 const transferService = require('../service/transferService');
+const authMiddleware = require('../service/authMiddleware');
 
-router.post('/', transferService.transfer);
+router.post('/', authMiddleware, transferService.transfer);
 
 module.exports = router;
